--- a/src/sass/layout/_layout-main.scss
+++ b/src/sass/layout/_layout-main.scss
@@ -53,3 +53,15 @@
 // Modal window Ingredients
 
 @import './modals/modal-ingredients';
+
+// Modal window How it's made?
+
+@import './modals/modal-how-its-made';
+
+// Modal window Location
+
+@import './modals/modal-location';
+
+// Modal window Franchise
+
+@import './modals/modal-franchise';
