--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -46,7 +46,10 @@
       </svg>
     </button>
     <!-- Button Buy now -->
-    <button class="btn btn-buy-now header__buy-now">
+    <button
+      class="btn btn-buy-now header__buy-now js-open-modal"
+      data-modal="1"
+    >
       Buy now
       <svg class="btn-buy-now__icon" width="12" height="12">
         <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
