--- a/src/sass/layout/modals/_modal-common.scss
+++ b/src/sass/layout/modals/_modal-common.scss
@@ -1,28 +1,49 @@
 /* === COMMON STYLES FOR MODAL WINDOWS === */
-// .backdrop {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
+.backdrop {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  pointer-events: none;
 
-//   width: 100%;
-//   height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-//   background-color: rgba($color: $disabledColor, $alpha: 0.7);
-//   opacity: 1;
+  width: 100%;
+  height: 100%;
 
-//   transition-property: opacity transform;
-//   transition-duration: 500ms;
+  background-color: rgba($color: $disabledColor, $alpha: 0.8);
+  // opacity: 1;
 
-//   &.is-hidden {
-//     visibility: hidden;
-//     opacity: 0;
-//     transform: scale(0);
-//     pointer-events: none;
-//   }
-// }
+  transition: $myOpacityTransition;
+  transition: $myTransformTransition;
+
+  // transition-property: opacity transform;
+  // transition-duration: 500ms;
+
+  // &.is-hidden {
+  //   visibility: hidden;
+  //   opacity: 0;
+  //   transform: scale(0);
+  //   pointer-events: none;
+  // }
+}
+
+.modal.active,
+.backdrop.active {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  z-index: 999;
+}
 
 /* === COMMON STYLES OF MODAL WINDOWS === */
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   margin: 0 auto;
   width: 280px;
   background-color: $phoneContactColor;
@@ -72,5 +93,81 @@
       font-size: 20px;
       line-height: calc(28 / 20);
     }
+  }
+
+  &__form-input-list {
+    margin-bottom: 26px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @include tablet-and-desktop {
+      margin-bottom: 32px;
+    }
+  }
+
+  &__form-input-item:not(:last-child) {
+    margin-bottom: 12px;
+
+    @include tablet-and-desktop {
+      margin-bottom: 16px;
+    }
+  }
+
+  &__form-input {
+    padding: 8px 12px;
+    width: 224px;
+    height: 32px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(17 / 12);
+
+    color: $secondaryColor;
+    background: rgba(248, 210, 78, 0.1);
+    border: 1px solid $mainBgColor;
+    border-radius: 10px;
+
+    @include tablet-and-desktop {
+      padding: 11px 16px;
+      width: 368px;
+      height: 42px;
+
+      font-size: 14px;
+      line-height: calc(20 / 14);
+    }
+
+    &::placeholder {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: calc(17 / 12);
+
+      color: $secondaryColor;
+
+      @include tablet-and-desktop {
+        font-size: 14px;
+        line-height: calc(20 / 14);
+      }
+    }
+
+    &:not(:placeholder-shown):invalid {
+      border-color: crimson;
+    }
+  }
+
+  .comment {
+    height: 65px;
+    resize: none;
+
+    @include tablet-and-desktop {
+      height: 84px;
+    }
+  }
+
+  &__form-field:focus-within &__form-input {
+    border-color: $mainAccentColor;
+    outline: none;
   }
 }
